package com.prototype.iasjem.bmicalculator;


import android.support.test.espresso.ViewInteraction;
import android.support.test.filters.LargeTest;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class UiTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void uiTest() {
        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.inputKg), withContentDescription("Key your weight as Kg"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.contain),
                                        0),
                                0),
                        isDisplayed()));
        appCompatEditText.perform(click());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.inputKg), withContentDescription("Key your weight as Kg"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.contain),
                                        0),
                                0),
                        isDisplayed()));
        appCompatEditText2.perform(replaceText("6"), closeSoftKeyboard());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.inputKg), withText("6"), withContentDescription("Key your weight as Kg"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.contain),
                                        0),
                                0),
                        isDisplayed()));
        appCompatEditText3.perform(click());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.inputKg), withText("6"), withContentDescription("Key your weight as Kg"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.contain),
                                        0),
                                0),
                        isDisplayed()));
        appCompatEditText4.perform(replaceText("61"));

        ViewInteraction appCompatEditText5 = onView(
                allOf(withId(R.id.inputKg), withText("61"), withContentDescription("Key your weight as Kg"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.contain),
                                        0),
                                0),
                        isDisplayed()));
        appCompatEditText5.perform(closeSoftKeyboard());

        ViewInteraction appCompatEditText6 = onView(
                allOf(withId(R.id.inputM), withContentDescription("Key your weight as Kg"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.contain),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText6.perform(replaceText("1.89"), closeSoftKeyboard());

        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.buttonCalculate), withText("Calculate"), withContentDescription("Calculate your BMI"),
                        childAtPosition(
                                allOf(withId(R.id.LinearLayout),
                                        childAtPosition(
                                                withClassName(is("android.support.constraint.ConstraintLayout")),
                                                3)),
                                1),
                        isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction textView = onView(
                allOf(withId(R.id.showBMI), withText("BMI =17.08"),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.view.View.class),
                                                1)),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("BMI =17.08")));
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
